[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Backgrounds/Green.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Title.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Buttons/nStart.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Buttons/hStart.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=5]
[ext_resource path="res://Sprites/UI/Buttons/hControls.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Buttons/nControls.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Buttons/hCredits.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Buttons/nCredits.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Panel/ControlsPanel.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/Buttons/hMinorExit.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/Panel/CreditsPanels.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/presents.png" type="Texture" id=13]
[ext_resource path="res://Audio/Select.ogg" type="AudioStream" id=14]
[ext_resource path="res://Audio/Title.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Title"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1060 ), Vector2( 0, 1060 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title/Buttons:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title/PresentsSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Node2D" parent="."]
position = Vector2( 0, 1060 )

[node name="TitleSprite" type="Sprite" parent="Title"]
position = Vector2( 600, 540 )
texture = ExtResource( 2 )

[node name="Buttons" type="Node2D" parent="Title"]
visible = false
position = Vector2( 370.737, 575.854 )

[node name="StartButton" type="TextureButton" parent="Title/Buttons"]
margin_left = -52.2635
margin_right = 389.736
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="Title/Buttons"]
margin_left = -44.264
margin_top = 95.0
margin_right = 557.736
margin_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="Title/Buttons"]
margin_left = -33.3651
margin_top = 190.0
margin_right = 488.635
margin_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panels" type="Node2D" parent="Title"]

[node name="ControlsPanel" type="Sprite" parent="Title/Panels"]
visible = false
position = Vector2( 620, 640 )
texture = ExtResource( 10 )

[node name="ControlsExitButton" type="TextureButton" parent="Title/Panels/ControlsPanel"]
margin_left = -140.971
margin_top = 250.419
margin_right = 137.029
margin_bottom = 301.419
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPanel" type="Sprite" parent="Title/Panels"]
visible = false
position = Vector2( 620, 640 )
texture = ExtResource( 12 )

[node name="CreditsExitButton" type="TextureButton" parent="Title/Panels/CreditsPanel"]
margin_left = -140.971
margin_top = 250.419
margin_right = 137.029
margin_bottom = 301.419
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 11 )
texture_focused = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentsSprite" type="Sprite" parent="Title"]
position = Vector2( 600, -540 )
texture = ExtResource( 13 )

[node name="ColorBackground" type="Sprite" parent="."]
position = Vector2( 600, 540 )
texture = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
autoplay = "Title"
anims/Title = SubResource( 1 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
mix_target = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -2.0
autoplay = true
mix_target = 2

[connection signal="button_down" from="Title/Buttons/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_down" from="Title/Buttons/ControlsButton" to="." method="_on_ControlsButton_button_down"]
[connection signal="button_down" from="Title/Buttons/CreditsButton" to="." method="_on_CreditsButton_button_down"]
[connection signal="button_down" from="Title/Panels/ControlsPanel/ControlsExitButton" to="." method="_on_ControlsExitButton_button_down"]
[connection signal="button_down" from="Title/Panels/CreditsPanel/CreditsExitButton" to="." method="_on_CreditsExitButton_button_down"]
